crates/cribo/tests/snapshots/bundled_code@simple_assignment.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_assignment/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

x = 5
y = 10
z = x + y
print(z)
