crates/cribo/tests/snapshots/bundled_code@simple_nested_handler.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_nested_handler/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
foo = _cribo.types.SimpleNamespace(__name__='foo')
def handler_3() -> str:
    return "Hello from foo.py"
foo.handler = handler_3
boo = _cribo.types.SimpleNamespace(__name__='boo')
def handler_2() -> str:
    return "Hello from boo.py"
boo.handler = handler_2
boo_handler = handler_2
def handler_1():
    print(foo.handler())
    print(boo_handler())
handler = handler_1
if __name__ == "__main__":
    handler_1()
