crates/cribo/tests/snapshots/bundled_code@simple_two_dots.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_two_dots/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
foo = types.SimpleNamespace()
foo.__name__ = 'foo'
foo.boo = types.SimpleNamespace()
def tada() -> str:
    return f"Tada {ANIMAL}!"
ANIMAL = "cat"
if __name__ == "__main__":
    print(tada())
