crates/cribo/tests/snapshots/bundled_code@stdlib_hoisting_aliases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_hoisting_aliases/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
from pathlib import Path as PyPath
from datetime import datetime as DT
def get_current_directory() -> str:
    """Get current directory using aliased os module."""
    fixed_path = "/home/user/project"
    path_obj = PyPath(fixed_path)
    return str(path_obj.name)
def get_mock_file_info() -> dict:
    """Get mock file information using aliased imports."""
    path_obj = PyPath("/home/user/test.txt")
    mod_time = DT.fromisoformat("2023-11-14T23:13:20")
    info = {"size": 1024, "name": "test.txt", "parent": "/home/user", "modified": mod_time.isoformat(), "exists": True, "is_absolute": True}
    return _cribo.json.loads(_cribo.json.dumps(info))
"""File utilities module - no side effects, uses aliased stdlib imports."""
@_cribo.functools.cache
def _cribo_init___cribo_60bb0a_logger():
    _cribo_module = _cribo.types.SimpleNamespace()
    _cribo_module.__name__ = 'logger'
    """Logger module - has side effects (print), uses different aliased stdlib imports."""
    python_sys = _cribo.sys
    _cribo_module.python_sys = python_sys
    log_lib = _cribo.logging
    _cribo_module.log_lib = log_lib
    from collections import OrderedDict as ODict
    from json import dumps as json_stringify
    print("Initializing logger module...")
    _cribo.logging.basicConfig(level=_cribo.logging.INFO, format="%(levelname)s - %(message)s")
    logger = _cribo.logging.getLogger(_cribo_module.__name__)
    _cribo_module.logger = logger

    def log_message(message: str) -> None:
        """Log a message using aliased logging module."""
        _cribo_module.logger.info(f"[ALIASED LOG] {message}")
        _cribo.sys.stdout.write(f"[STDOUT] {message}\n")
        _cribo.sys.stdout.flush()
    _cribo_module.log_message = log_message

    def get_logger_info() -> str:
        """Get information about the logger configuration."""
        info = ODict([("python_version", "3.12.0"), ("logger_name", logger.name), ("log_level", _cribo.logging.getLevelName(logger.level)), ("handlers", len(logger.handlers))])
        return json_stringify(info, indent=2)
    _cribo_module.get_logger_info = get_logger_info
    _cribo_module.ODict = _cribo.collections.OrderedDict
    _cribo_module.json_stringify = _cribo.json.dumps
    return _cribo_module
"""Test stdlib hoisting with aliases and renamed imports."""
logger = _cribo_init___cribo_60bb0a_logger()
log_message = logger.log_message
get_logger_info = logger.get_logger_info
dir_name = get_current_directory()
print(f"Current directory name: {dir_name}")
info = get_mock_file_info()
print(f"Mock file info: {info}")
log_message("Starting application")
logger_info = get_logger_info()
print(f"Logger info: {logger_info}")
print("All tests completed successfully!")
