crates/cribo/tests/snapshots/bundled_code@stdlib_module_conflicts_package_entry.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_conflicts_package_entry/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

print("Test completed")
